--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ baseurl: /OnceAc
 avatar: https://gitee.com/zhiliangj/Typora_Img/raw/master/Logo.png
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/favicon.png
+favicon: https://gitee.com/zhiliangj/Typora_Img/raw/master/Logo_gaitubao_48x60.png
 
 
 # 菜单中的按钮
