--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ disqus: # onceac #shortname
 gitalk:
   clientID: 011fde669e66fd7b7316
   clientSecret: e59520c569b4aa294a385e97c5bdc9fdc2b1d61a 
-  repo: 
-  owner: 
+  repo: https://zhiliangjia.github.io/OnceAc
+  owner: ZhiliangJia
 
 # 输入Google Analytics web tracking code
 google_analytics:
