Gitalk中评论管理仓库

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ disqus: # onceac #shortname
 gitalk:
   clientID: 011fde669e66fd7b7316
   clientSecret: e59520c569b4aa294a385e97c5bdc9fdc2b1d61a 
-  repo: OnceAc
+  repo: Gitalk
   owner: ZhiliangJia
 
 # 输入Google Analytics web tracking code
