--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ copyright:
 google_analytics:
 
 utteranc:
-  repo: # Your github repo path, also see: https://utteranc.es
+  # repo: # Your github repo path, also see: https://utteranc.es
 
 #
 # !! 以下所有设置都不需要更改 !!
